chore: add more JVM params